--- a/programs/spl-account-compression-idl-issue/Cargo.toml
+++ b/programs/spl-account-compression-idl-issue/Cargo.toml
@@ -17,5 +17,6 @@ default = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["idl-build"] }
-spl-account-compression = { version = "0.4.0", features = ["cpi"] }
+anchor-lang = { version = "0.30.1", features = ["idl-build"] }
+# spl-account-compression = { version = "0.4.0", features = ["cpi"] }
+# spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
